Sculpt: Viewport drawing problem with clip and brush radius #116403

Closed
opened 2023-12-21 00:45:39 +01:00 by Otakar · 5 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17

Blender Version
Broken: version: 4.0.0, branch: blender-v4.0-release, commit date: 2023-11-13 17:26, hash: 878f71061b8e
Worked: (newest version of Blender that worked as expected)

Short description of error
Sculpt mode + reference image + clip + brush scale -viewport overlays = flicker glitch

Exact steps for others to reproduce the error
Quite tedious setup, but confirmed with vanilla blender, can be really annoying when having references all around the place.

  1. Create object
  2. Place reference image behind it (empty as image)
  3. viewport clip back half of the cube (alt+b)
  4. disable viewport overlays
  5. go sculpt mode
  6. look at the cube from the (opened) back, as if through (viewport disabled) reference image
  7. change brush size

voilá! object flickers with every brush size or strength change.

This seems to somehow refresh/enable the viewport overlays with every brush width/strength change.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17 **Blender Version** Broken: version: 4.0.0, branch: blender-v4.0-release, commit date: 2023-11-13 17:26, hash: `878f71061b8e` Worked: (newest version of Blender that worked as expected) **Short description of error** Sculpt mode + reference image + clip + brush scale -viewport overlays = flicker glitch **Exact steps for others to reproduce the error** Quite tedious setup, but confirmed with vanilla blender, can be really annoying when having references all around the place. 1. Create object 2. Place reference image behind it (empty as image) 3. viewport clip back half of the cube (alt+b) 4. disable viewport overlays 5. go sculpt mode 6. look at the cube from the (opened) back, as if through (viewport disabled) reference image 7. change brush size voilá! object flickers with every brush size or strength change. This seems to somehow refresh/enable the viewport overlays with every brush width/strength change.
Otakar added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-21 00:45:40 +01:00
Member

Thanks for the report. Can confirm the regression, bisecting.

Thanks for the report. Can confirm the regression, bisecting.
Pratik Borhade changed title from Sculpt mode + reference image + clip + brush scale -viewport overlays = flicker glitch to Sculpt: Viewport drawing problem with clip and brush radius 2023-12-21 05:49:50 +01:00
Member

Git bisect points to fe39456ba5
@pragma37 ^

Git bisect points to fe39456ba5f452ffbc04f4e0935da4162059cce5 @pragma37 ^
Member

Can you upload a reproduction file, please?

Can you upload a reproduction file, please?
Member

I can reproduce an issue where rendering doesn't work correctly under similar circumstances.
But it happens regardless of the presence of reference images and causes the mesh to disappear, not to flicker.
So I'm not 100% sure if we are looking at the exact same issue.

Could you try this build when it's ready and check if it fixes the issue for you?
https://builder.blender.org/download/patch/PR116441/

I can reproduce an issue where rendering doesn't work correctly under similar circumstances. But it happens regardless of the presence of reference images and causes the mesh to disappear, not to flicker. So I'm not 100% sure if we are looking at the exact same issue. Could you try this build when it's ready and check if it fixes the issue for you? https://builder.blender.org/download/patch/PR116441/
Author

Hello, OP here:

Can confirm the reference image was not connected with the issue in the first place. My bad.
And also yes, we are looking at the same issue - dissappear is a better word for that glitch.

Can confirm the issue is fixed in the branch you linked.

thank you and congrats, good job!

Hello, OP here: Can confirm the reference image was not connected with the issue in the first place. My bad. And also yes, we are looking at the same issue - dissappear is a better word for that glitch. **Can confirm the issue is fixed in the branch you linked.** thank you and congrats, good job!
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-22 17:48:52 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116403
No description provided.